--- a/Privacy.html
+++ b/Privacy.html
@@ -51,7 +51,7 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="./" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="www.consulting.rkkoranteng.com" style="padding: 10px 20px;">Consulting</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="www.training.rkkoranteng.com" style="padding: 10px 20px;">Training</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Training.html" style="padding: 10px 20px;">Training</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px 20px;">Contact</a>
 </li></ul>
           </div>
@@ -61,7 +61,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="www.consulting.rkkoranteng.com">Consulting</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="www.training.rkkoranteng.com">Training</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Training.html">Training</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
 </li></ul>
               </div>
