--- a/About.html
+++ b/About.html
@@ -107,7 +107,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
               <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-1">
                 <span class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-file-icon u-icon u-icon-circle u-palette-1-base u-text-white u-icon-1"><img src="images/542664-4c904e42.png" alt=""></span>
                 <h5 class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-text u-text-3">Database Health Checks</h5>
-                <p class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-text u-text-default u-text-4">R​regular database health assessments to identify potential issues before they escalate.</p>
+                <p class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-text u-text-default u-text-4">R​egular database health assessments to identify potential issues before they escalate.</p>
               </div>
             </div>
             <div class="u-align-center u-container-align-center u-container-align-left u-container-style u-list-item u-repeater-item u-white">
@@ -126,7 +126,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
             </div>
           </div>
         </div>
-        <a href="" class="u-align-center u-btn u-button-style u-palette-1-base u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Lea​rn More</a>
+        <a href="Consulting.html" data-page-id="440806750" class="u-align-center u-btn u-button-style u-palette-1-base u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" title="Consulting">Lea​rn More</a>
       </div>
     </section>
     
@@ -136,7 +136,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
         <p class="u-align-center u-text u-text-1">
           <a href="Consulting.html" data-page-id="440806750" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" title="Consulting">Consulting </a>| <a href="Training.html" data-page-id="949314753" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2" title="Home">Training</a>&nbsp;| <a href="Contact.html" data-page-id="107224232" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-3" title="Contact">Contact</a>| <a href="Privacy.html" data-page-id="81624041" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-4" title="Privacy">Privacy </a>| <a href="Terms.html" data-page-id="197338384" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-5" title="Terms">Terms</a>
         </p>
-        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">Richard Koranteng</a>
+        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">Richard Koranteng LLC.</a>&nbsp;All Rights Reserved
         </p>
       </div></footer>
     <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 20px;" class="u-back-to-top u-icon u-icon-rounded u-opacity u-opacity-85 u-palette-1-base" data-href="#"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg><svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg></span>
