--- a/Consulting.html
+++ b/Consulting.html
@@ -68,19 +68,18 @@
       </div><style class="u-sticky-style" data-style-id="590b">.u-sticky-fixed.u-sticky-590b, .u-body.u-sticky-fixed .u-sticky-590b {
 box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
 }</style></header>
-    <section class="u-align-center u-clearfix u-container-align-center u-palette-1-base u-section-1" id="sec-a471">
+    <section class="u-align-center u-clearfix u-container-align-center-xl u-palette-1-base u-section-1" id="sec-a471">
       <div class="u-clearfix u-sheet u-valign-bottom-xs u-sheet-1">
         <h4 class="u-align-center u-text u-text-1">PROVEN &amp; RELIABLE</h4>
         <h2 class="u-align-center u-text u-text-default u-text-2">Database Solutions for Your Business</h2>
-        <p class="u-align-center u-large-text u-text u-text-variant u-text-3"> Unlock the full potential of your databases with expert remote consulting&nbsp;</p>
+        <p class="u-align-center u-large-text u-text u-text-variant u-text-3"> Let's transform your database into a powerful competitive edge.</p>
         <a href="Re-skill.html" data-page-id="284407710" class="u-align-center u-btn u-button-style u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" title="Re-skill"> Schedule a Free Consultation</a>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-white u-section-2" id="sec-9edf">
+    <section class="u-align-center u-clearfix u-container-align-center u-white u-section-2" id="sec-9edf">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h4 class="u-align-center u-text u-text-1">Expert remote services to ensure scalable and&nbsp;<br>high-performance database solutions tailored to your needs.
-        </h4>
-        <p class="u-align-center u-text u-text-2">I specialize in database modernization, helping businesses automate workflows, enhance security, and seamlessly migrate to the cloud. My expert remote services ensure scalable, high-performance database solutions tailored to your needs.</p>
+        <h4 class="u-align-center u-text u-text-1"> Modernize and unlock the full potential of your databases&nbsp;</h4>
+        <p class="u-align-center u-text u-text-2"> DevOps, Cloud, Security ... Welcome to the Future!</p>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-list-item-1">
@@ -166,7 +165,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-5" id="block-1">
+    <section class="u-align-center u-clearfix u-container-align-center u-section-5" id="block-1">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h4 class="u-align-center u-text u-text-default u-text-1"> Empower Your DBA Team with Modern Training</h4>
         <p class="u-align-center u-text u-text-2"> With customized training programs tailored to your organization’s needs, your DBAs will gain the skills to optimize workflows, improve efficiency, and drive innovation.</p>
@@ -180,7 +179,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
         <p class="u-align-center u-text u-text-1">
           <a href="Consulting.html" data-page-id="440806750" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" title="Consulting">Consulting </a>| <a href="Training.html" data-page-id="949314753" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2" title="Home">Training</a>&nbsp;| <a href="Contact.html" data-page-id="107224232" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-3" title="Contact">Contact</a>| <a href="Privacy.html" data-page-id="81624041" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-4" title="Privacy">Privacy </a>| <a href="Terms.html" data-page-id="197338384" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-5" title="Terms">Terms</a>
         </p>
-        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">Richard Koranteng</a>
+        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">Richard Koranteng LLC.</a>&nbsp;All Rights Reserved
         </p>
       </div></footer>
     <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 20px;" class="u-back-to-top u-icon u-icon-rounded u-opacity u-opacity-85 u-palette-1-base" data-href="#"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg><svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg></span>
