--- a/Re-skill.html
+++ b/Re-skill.html
@@ -76,67 +76,37 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
       </div>
     </section>
     <section class="u-align-center u-clearfix u-container-align-center u-white u-section-2" id="sec-8d77">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h4 class="u-text u-text-default u-text-1">Roadmap</h4>
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+        <h4 class="u-text u-text-default u-text-1"> Training Programs</h4>
         <p class="u-text u-text-default u-text-2"> My re-skill courses are designed for aspiring DBAs who want to transition into database administration by mastering core DBA concepts.</p>
         <div class="data-layout-selected u-clearfix u-expanded-width u-gutter-30 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
-            <div class="u-layout-col">
-              <div class="u-size-30">
-                <div class="u-layout-row">
-                  <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-1">
-                    <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-1">
-                      <h3 class="u-text u-text-3"> Intro to Computers</h3>
-                      <h4 class="u-text u-text-4">Week 1</h4>
-                      <p class="u-text u-text-5"> Understand fundamental computer concepts, such as hardware, software, networking, and other relevant emerging technologies.</p>
-                    </div>
-                  </div>
-                  <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-2">
-                    <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
-                      <h3 class="u-text u-text-6"> Linux Essentials&nbsp;<br>for DBAs
-                      </h3>
-                      <h4 class="u-text u-text-7">Week 2 - 4</h4>
-                      <p class="u-text u-text-8"> Learn the basics of Linux (including commands) and essentials for managing databases in Linux/Unix environments.</p>
-                    </div>
-                  </div>
-                  <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-3">
-                    <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-3">
-                      <h3 class="u-text u-text-9">Architecture and Installation</h3>
-                      <h4 class="u-text u-text-10">Week 5 - 6</h4>
-                      <p class="u-text u-text-11"> Learn the core concepts of Oracle database architecture, including installation, configuration, and maintenance.&nbsp;</p>
-                    </div>
-                  </div>
+            <div class="u-layout-row">
+              <div class="Object]-md u-align-center u-container-align-center u-container-style u-grey-5 u-layout-cell u-size-20 u-size-[object u-layout-cell-1">
+                <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-1">
+                  <h3 class="u-text u-text-3">Oracle&nbsp;</h3>
+                  <p class="u-text u-text-4">(live online) </p>
+                  <a href="" class="u-align-center u-btn u-button-style u-palette-1-base u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">View​ Sessions</a>
                 </div>
               </div>
-              <div class="u-size-30">
-                <div class="u-layout-row">
-                  <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-4">
-                    <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-4">
-                      <h3 class="u-align-center u-text u-text-12"> Structured Query Language (SQL)</h3>
-                      <h4 class="u-align-center u-text u-text-13">Week 7 - 9</h4>
-                      <p class="u-align-center u-text u-text-14"> Gain expertise in SQL to manage, query, and manipulate data effectively.&nbsp;</p>
-                    </div>
-                  </div>
-                  <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-5">
-                    <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-5">
-                      <h3 class="u-align-center u-text u-text-15"> Backup and Recovery</h3>
-                      <h4 class="u-align-center u-text u-text-16">Week 10 - 11</h4>
-                      <p class="u-align-center u-text u-text-17"> Learn essential backup strategies and disaster recovery techniques to protect critical data.&nbsp;</p>
-                    </div>
-                  </div>
-                  <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-6">
-                    <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-6">
-                      <h3 class="u-align-center u-text u-text-18"> Monitoring and Performance</h3>
-                      <h4 class="u-align-center u-text u-text-19">Week 12 - 13</h4>
-                      <p class="u-align-center u-text u-text-20"> Develop skills to monitor database performance, identify bottlenecks, and optimize system efficiency.</p>
-                    </div>
-                  </div>
+              <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-2">
+                <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
+                  <h3 class="u-text u-text-5"> Postgres</h3>
+                  <p class="u-text u-text-6"> (live online) </p>
+                  <a href="" class="u-align-center u-btn u-button-style u-palette-1-base u-btn-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">View Sessions </a>
+                </div>
+              </div>
+              <div class="u-align-center u-container-align-center u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-3">
+                <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-3">
+                  <h3 class="u-text u-text-7">MySQL</h3>
+                  <p class="u-text u-text-8"> (live online) </p>
+                  <a href="" class="u-align-center u-btn u-button-style u-palette-1-base u-btn-3" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">View Sessions </a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <a href="" class="u-align-center u-btn u-button-style u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">Reskill Now </a>
+        <a href="Up-skill.html" data-page-id="926515655" class="u-active-none u-border-2 u-border-hover-palette-1-dark-2 u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-button-style u-hover-none u-none u-text-hover-palette-1-dark-3 u-text-palette-1-base u-btn-4" title="Up-skill"> Already a working DBA? It’s time to UPSKILL and stay ahead.</a>
       </div>
     </section>
     
@@ -146,7 +116,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
         <p class="u-align-center u-text u-text-1">
           <a href="Consulting.html" data-page-id="440806750" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" title="Consulting">Consulting </a>| <a href="Training.html" data-page-id="949314753" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2" title="Home">Training</a>&nbsp;| <a href="Contact.html" data-page-id="107224232" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-3" title="Contact">Contact</a>| <a href="Privacy.html" data-page-id="81624041" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-4" title="Privacy">Privacy </a>| <a href="Terms.html" data-page-id="197338384" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-5" title="Terms">Terms</a>
         </p>
-        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">Richard Koranteng</a>
+        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">Richard Koranteng LLC.</a>&nbsp;All Rights Reserved
         </p>
       </div></footer>
     <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 20px;" class="u-back-to-top u-icon u-icon-rounded u-opacity u-opacity-85 u-palette-1-base" data-href="#"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg><svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg></span>
