--- a/Consulting.html
+++ b/Consulting.html
@@ -68,12 +68,12 @@
       </div><style class="u-sticky-style" data-style-id="590b">.u-sticky-fixed.u-sticky-590b, .u-body.u-sticky-fixed .u-sticky-590b {
 box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
 }</style></header>
-    <section class="u-align-center u-clearfix u-container-align-center-xl u-palette-1-base u-section-1" id="sec-a471">
+    <section class="u-align-center u-clearfix u-container-align-center u-container-align-center-xl u-palette-1-base u-section-1" id="sec-a471">
       <div class="u-clearfix u-sheet u-valign-bottom-xs u-sheet-1">
         <h4 class="u-align-center u-text u-text-1">PROVEN &amp; RELIABLE</h4>
         <h2 class="u-align-center u-text u-text-default u-text-2">Database Solutions for Your Business</h2>
         <p class="u-align-center u-large-text u-text u-text-variant u-text-3"> Let's transform your database into a powerful competitive edge.</p>
-        <a href="Re-skill.html" data-page-id="284407710" class="u-align-center u-btn u-button-style u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" title="Re-skill"> Schedule a Free Consultation</a>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ2BMW_ebBrDPEnl5n3oiZziXvGFj0LRBzxEQZTsjCmE_M-OWgymxc6LqCIRmCe96LgKfmeK87OT" class="u-align-center u-btn u-button-style u-btn-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" title="Re-skill" target="_blank"> Schedule a Free Consultation</a>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-container-align-center u-white u-section-2" id="sec-9edf">
