--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div><style class="u-sticky-style" data-style-id="590b">.u-sticky-fixed.u-sticky-590b, .u-body.u-sticky-fixed .u-sticky-590b {
 box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
 }</style></header>
-    <section class="u-align-center u-clearfix u-container-align-center u-palette-1-base u-section-1" id="sec-5a87">
+    <section class="u-align-center u-clearfix u-palette-1-base u-section-1" id="sec-5a87">
       <div class="u-clearfix u-sheet u-valign-bottom-xs u-sheet-1">
         <h4 class="u-align-center u-text u-text-1">PROVEN &amp; RELIABLE</h4>
         <h2 class="u-align-center u-text u-text-default u-text-2">Remote Database Services</h2>
