--- a/products/azure-devops.html
+++ b/products/azure-devops.html
@@ -44,33 +44,35 @@
     ".replace(/gascript/g, 'script'));
     }
     </script><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-590b u-white u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body data-path-to-root="../" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-590b u-white u-header" id="header"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="../" data-page-id="6431794" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="98" title="Home">
           <img src="../images/rkkoranteng-website-logo.png" class="u-logo-image u-logo-image-1">
         </a>
-        <nav class="u-align-right u-menu u-menu-one-level u-offcanvas u-menu-1">
+        <nav class="u-align-right u-menu u-menu-one-level u-offcanvas u-menu-1" role="navigation">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" tabindex="-1" aria-label="Open menu" aria-controls="99ae">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="../" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="../Solutions.html" style="padding: 10px 20px;">Solutions</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="../About.html" style="padding: 10px 20px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="../Contact.html" style="padding: 10px 20px;">Contact</a>
+            <ul class="u-nav u-unstyled u-nav-1" role="menubar"><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="../" style="padding: 10px 20px;">Home</a>
+</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="../Solutions.html" style="padding: 10px 20px;">Solutions</a>
+</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="../About.html" style="padding: 10px 20px;">About</a>
+</li><li role="none" class="u-nav-item"><a tabindex="-1" role="menuitem" class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://blog.rkkoranteng.com" target="_blank" style="padding: 10px 20px;">Blog</a>
+</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="../Contact.html" style="padding: 10px 20px;">Contact</a>
 </li></ul>
           </div>
-          <div class="u-custom-menu u-nav-container-collapse">
+          <div class="u-custom-menu u-nav-container-collapse" id="99ae" role="region" aria-label="Menu panel">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-left-xs u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="../">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="../Solutions.html">Solutions</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="../About.html">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="../Contact.html">Contact</a>
+                <div class="u-menu-close" tabindex="-1" aria-label="Close menu"></div>
+                <ul class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-align-left-xs u-nav u-popupmenu-items u-unstyled u-nav-2" role="menubar"><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="../">Home</a>
+</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="../Solutions.html">Solutions</a>
+</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="../About.html">About</a>
+</li><li role="none" class="u-nav-item"><a tabindex="-1" role="menuitem" class="u-button-style u-nav-link" href="https://blog.rkkoranteng.com" target="_blank">Blog</a>
+</li><li role="none" class="u-nav-item"><a role="menuitem" class="u-button-style u-nav-link" href="../Contact.html">Contact</a>
 </li></ul>
               </div>
             </div>
@@ -81,7 +83,7 @@
 box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
 }</style></header>
     <section class="u-clearfix u-grey-10 u-section-1" id="block-1">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-sheet-1"><!--product--><!--product_options_json--><!--{"source":""}--><!--/product_options_json--><!--product_item-->
+      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-sheet-1"><!--product--><!--product_options_json--><!--{"source":""}--><!--/product_options_json-->
         <div class="u-container-style u-expanded-width u-product u-white u-product-1">
           <div class="u-container-layout u-valign-middle-md u-valign-middle-xl u-valign-top-xs u-container-layout-1"><!--product_image-->
             <img alt="" class="u-image u-image-contain u-image-default u-product-control u-image-1" data-image-width="2000" data-image-height="1333" src="../images/d754debf.svg"><img src="../images/414330ad.svg" class="u-product-second-image"><!--/product_image--><!--product_title-->
@@ -95,7 +97,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
             <div class="u-product-control u-product-desc u-text u-text-2">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit.</div><!--/product_content--><!--product_button--><!--options_json--><!--{"clickType":"buy-now","content":"Buy Now"}--><!--/options_json-->
             <a href="#popup-dcf6" class="u-black u-btn u-button-style u-product-control u-btn-1 u-dialog-link u-payment-button" data-product-button-click-type="buy-now" data-product-id="1" data-product="{&quot;id&quot;:&quot;1&quot;,&quot;name&quot;:&quot;azure-devops&quot;,&quot;title&quot;:&quot;Azure DevOps&quot;,&quot;description&quot;:&quot;Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit.&quot;,&quot;fullDescription&quot;:&quot;Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.&quot;,&quot;price&quot;:&quot;17&quot;,&quot;oldPrice&quot;:&quot;20&quot;,&quot;quantity&quot;:1,&quot;currency&quot;:&quot;USD&quot;,&quot;sku&quot;:&quot;&quot;,&quot;outOfStock&quot;:false,&quot;isFeatured&quot;:false,&quot;categories&quot;:[&quot;2&quot;],&quot;images&quot;:[{&quot;url&quot;:&quot;../images/d754debf.svg&quot;},{&quot;url&quot;:&quot;../images/414330ad.svg&quot;}],&quot;created&quot;:1743437410613,&quot;updated&quot;:1745515905986,&quot;isDefault&quot;:true,&quot;categoriesData&quot;:[{&quot;link&quot;:&quot;./products/products.html#/1///2&quot;,&quot;title&quot;:&quot;oracle&quot;}]}"><!--product_button_content-->Buy Now<!--/product_button_content--></a><!--/product_button-->
           </div>
-        </div><!--/product_item--><!--/product-->
+        </div><!--/product-->
       </div>
     </section>
     
@@ -103,9 +105,9 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
     
     <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80 u-footer" id="footer"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-align-center u-text u-text-1">
-          <a href="../Solutions.html" data-page-id="440806750" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" title="Consulting">Solutions</a>| <a href="../About.html" data-page-id="668010430" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2" title="Home">About</a>&nbsp;| <a href="../Contact.html" data-page-id="107224232" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-3" title="Contact">Contact</a>| <a href="../Privacy.html" data-page-id="81624041" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-4" title="Privacy">Privacy </a>| <a href="../Terms.html" data-page-id="197338384" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-5" title="Terms">Terms</a>
+          <a href="../Solutions.html" data-page-id="440806750" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-1" title="Consulting">Solutions</a>| <a href="../About.html" data-page-id="668010430" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-2" title="Home">About</a>&nbsp;| <a href="https://blog.rkkoranteng" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-3" target="_blank">Blog </a>|&nbsp;<a href="../Contact.html" data-page-id="107224232" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-4" title="Contact">Contact</a>| <a href="../Privacy.html" data-page-id="81624041" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-5" title="Privacy">Privacy </a>| <a href="../Terms.html" data-page-id="197338384" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6" title="Terms">Terms</a>
         </p>
-        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-6">RKKoranteng LLC.</a>&nbsp;All Rights Reserved
+        <p class="u-small-text u-text u-text-variant u-text-2"> © 2025&nbsp;<a href="https://rkkoranteng.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-white u-btn-7">RKKoranteng LLC.</a>&nbsp;All Rights Reserved
         </p>
       </div></footer>
   <section class="u-black u-clearfix u-container-style u-dialog-block u-opacity u-opacity-70 u-payment-dialog u-valign-middle u-dialog-section-4" id="popup-dcf6">
@@ -115,7 +117,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
           <div class="u-expanded-width u-products u-products-1" data-site-sorting-prop="created" data-site-sorting-order="desc" data-items-per-page="1">
             <div class="u-list-control"></div>
             <div class="u-repeater u-repeater-1">
-              <div class="u-container-style u-products-item u-repeater-item">
+              <!--product_item--><div class="u-container-style u-products-item u-repeater-item">
                 <div class="u-container-layout u-similar-container u-container-layout-2">
                   <h5 class="u-align-left u-product-control u-text u-text-2">
                     <a class="u-product-title-link" href="#">Product 1 Title</a>
@@ -142,7 +144,7 @@ box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4) !important
                     </div>
                   </div>
                 </div>
-              </div>
+              </div><!--/product_item-->
             </div>
             <div class="u-list-control"></div>
           </div>
